@@ -1,3 +1,11 @@
+2005-01-24  Davide Viti  <zinosat@tiscali.it>
+
+	* l10n-spellcheck.sh : more fixes in order to deal correctly with symlinks. "latest" and "previous" now use absolute paths.
+
+	* msgid_extract.awk: awk script used to extract "msgid" entries from "templates.pot"
+
+	* build_index.sh : index.html displays the date in UTC
+
 2005-01-20  Davide Viti  <zinosat@tiscali.it>
 
 	* l10n-spellcheck.sh: the name of the dir with all this stuff is not bound
